Fix some JDK9 deprecated warnings constructors of Integer/Long/Double/Float/Short/Byte