@@ -40,8 +40,8 @@ public class AnyObjectExampleTest extends TestCase {
         assertEquals("[true, false, true, false]", object.get("bool").toString());
         assertEquals(4, ((List<?>) object.get("bool")).size());
         //
-        assertEquals(new Integer(42), object.get("int"));
-        assertEquals(new Double(3.14159), object.get("float"));
+        assertEquals(Integer.valueOf(42), object.get("int"));
+        assertEquals(Double.valueOf(3.14159), object.get("float"));
         //
         assertEquals("[LITE, RES_ACID, SUS_DEXT]", object.get("list").toString());
         List<?> list2 = (List<?>) object.get("list");
@@ -53,7 +53,7 @@ public class AnyObjectExampleTest extends TestCase {
         assertEquals("{hp=13, sp=5}", object.get("dict").toString());
         Map<String, Integer> map = (Map<String, Integer>) object.get("dict");
         assertEquals(2, map.keySet().size());
-        assertEquals(new Integer(13), map.get("hp"));
-        assertEquals(new Integer(5), map.get("sp"));
+        assertEquals(Integer.valueOf(13), map.get("hp"));
+        assertEquals(Integer.valueOf(5), map.get("sp"));
     }
 }
