@@ -40,7 +40,7 @@ public class TagsTest extends TestCase {
         String output = yaml.dump(foo);
         // System.out.println(output);
         Foo foo2 = (Foo) yaml.load(output);
-        assertEquals(new Long(42L), foo2.getBar());
+        assertEquals(Long.valueOf(42L), foo2.getBar());
     }
 
     public static class Foo {
