@@ -24,11 +24,12 @@ import java.util.Map;
 public class FloatTagTest extends AbstractTest {
 
     public void testFloat() {
-        assertEquals(new Double(6.8523015e+5), getMapValue("canonical: 6.8523015e+5", "canonical"));
-        assertEquals(new Double(6.8523015e+5),
+        assertEquals(Double.valueOf(6.8523015e+5),
+                getMapValue("canonical: 6.8523015e+5", "canonical"));
+        assertEquals(Double.valueOf(6.8523015e+5),
                 getMapValue("exponentioal: 685.230_15e+03", "exponentioal"));
-        assertEquals(new Double(6.8523015e+5), getMapValue("fixed: 685_230.15", "fixed"));
-        assertEquals(new Double(6.8523015e+5),
+        assertEquals(Double.valueOf(6.8523015e+5), getMapValue("fixed: 685_230.15", "fixed"));
+        assertEquals(Double.valueOf(6.8523015e+5),
                 getMapValue("sexagesimal: 190:20:30.15", "sexagesimal"));
         assertEquals(Double.NEGATIVE_INFINITY,
                 getMapValue("negative infinity: -.inf", "negative infinity"));
@@ -36,24 +37,25 @@ public class FloatTagTest extends AbstractTest {
     }
 
     public void testFloatShorthand() {
-        assertEquals(new Double(1), getMapValue("number: !!float 1", "number"));
+        assertEquals(Double.valueOf(1), getMapValue("number: !!float 1", "number"));
     }
 
     public void testFloatTag() {
-        assertEquals(new Double(1), getMapValue("number: !<tag:yaml.org,2002:float> 1", "number"));
+        assertEquals(Double.valueOf(1),
+                getMapValue("number: !<tag:yaml.org,2002:float> 1", "number"));
     }
 
     public void testFloatOut() {
         Map<String, Object> map = new HashMap<String, Object>();
-        map.put("number", new Double(1));
+        map.put("number", Double.valueOf(1));
         String output = dump(map);
         assertEquals("{number: 1.0}\n", output);
     }
 
     public void testBasicDoubleScalarLoad() {
-        assertEquals(new Double(47.0), load("47.0"));
-        assertEquals(new Double(0.0), load("0.0"));
-        assertEquals(new Double(-1.0), load("-1.0"));
+        assertEquals(Double.valueOf(47.0), load("47.0"));
+        assertEquals(Double.valueOf(0.0), load("0.0"));
+        assertEquals(Double.valueOf(-1.0), load("-1.0"));
     }
 
     public void testDumpStr() {
@@ -68,10 +70,10 @@ public class FloatTagTest extends AbstractTest {
      * to test http://code.google.com/p/snakeyaml/issues/detail?id=130
      */
     public void testScientificFloatWithoutDecimalDot() {
-        assertEquals(new Double(8e-06), load("8e-06"));
-        assertEquals(new Double(8e06), load("8e06"));
-        assertEquals(new Double(8e06), load("8e+06"));
-        assertEquals(new Double(8000e06), load("8_000e06"));
-        assertEquals(new Double(123e-06), load("123e-06"));
+        assertEquals(Double.valueOf(8e-06), load("8e-06"));
+        assertEquals(Double.valueOf(8e06), load("8e06"));
+        assertEquals(Double.valueOf(8e06), load("8e+06"));
+        assertEquals(Double.valueOf(8000e06), load("8_000e06"));
+        assertEquals(Double.valueOf(123e-06), load("123e-06"));
     }
 }
