@@ -25,40 +25,42 @@ import java.util.Map;
 public class IntTagTest extends AbstractTest {
 
     public void testInt() {
-        assertEquals(new Integer(685230), getMapValue("canonical: 685230", "canonical"));
-        assertEquals(new Integer(685230), getMapValue("number: 685_230", "number"));
-        assertEquals(new Integer(685230), getMapValue("decimal: +685230", "decimal"));
-        assertEquals(new Integer(-685230), getMapValue("number: -685230", "number"));
-        assertEquals(new Integer(685230), getMapValue("octal: 02472256", "octal"));
-        assertEquals(new Integer(685230), getMapValue("hexadecimal: 0x_0A_74_AE", "hexadecimal"));
-        assertEquals(new Integer(685230),
+        assertEquals(Integer.valueOf(685230), getMapValue("canonical: 685230", "canonical"));
+        assertEquals(Integer.valueOf(685230), getMapValue("number: 685_230", "number"));
+        assertEquals(Integer.valueOf(685230), getMapValue("decimal: +685230", "decimal"));
+        assertEquals(Integer.valueOf(-685230), getMapValue("number: -685230", "number"));
+        assertEquals(Integer.valueOf(685230), getMapValue("octal: 02472256", "octal"));
+        assertEquals(Integer.valueOf(685230),
+                getMapValue("hexadecimal: 0x_0A_74_AE", "hexadecimal"));
+        assertEquals(Integer.valueOf(685230),
                 getMapValue("binary: 0b1010_0111_0100_1010_1110", "binary"));
-        assertEquals(new Integer(685230), getMapValue("sexagesimal: 190:20:30", "sexagesimal"));
-        assertEquals(new Integer(0), load("0"));
-        assertEquals(new Integer(0), load("-0"));
-        assertEquals(new Integer(0), load("+0"));
+        assertEquals(Integer.valueOf(685230), getMapValue("sexagesimal: 190:20:30", "sexagesimal"));
+        assertEquals(Integer.valueOf(0), load("0"));
+        assertEquals(Integer.valueOf(0), load("-0"));
+        assertEquals(Integer.valueOf(0), load("+0"));
         assertEquals(Integer.MIN_VALUE, load(dump(Integer.MIN_VALUE)));
         assertEquals(Integer.MAX_VALUE, load(dump(Integer.MAX_VALUE)));
     }
 
     public void testBigInt() {
-        assertEquals(new Long(922337203685477580L), load("922337203685477580"));
+        assertEquals(Long.valueOf(922337203685477580L), load("922337203685477580"));
         assertEquals(new BigInteger("9223372036854775809999999999"),
                 load("9223372036854775809999999999"));
         assertEquals(Long.MIN_VALUE, load("-9223372036854775808"));
     }
 
     public void testIntShorthand() {
-        assertEquals(new Integer(1), getMapValue("number: !!int 1", "number"));
+        assertEquals(Integer.valueOf(1), getMapValue("number: !!int 1", "number"));
     }
 
     public void testIntTag() {
-        assertEquals(new Integer(1), getMapValue("number: !<tag:yaml.org,2002:int> 1", "number"));
+        assertEquals(Integer.valueOf(1),
+                getMapValue("number: !<tag:yaml.org,2002:int> 1", "number"));
     }
 
     public void testIntOut() {
         Map<String, Integer> map = new HashMap<String, Integer>();
-        map.put("number", new Integer(1));
+        map.put("number", Integer.valueOf(1));
         String output = dump(map);
         assertTrue(output.contains("number: 1"));
     }
